[tool.poetry]
name = "versallm"
version = "0.1.0"
description = ""
authors = ["Mohwit <mohwits@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.2"
groq = "^0.9.0"
python-dotenv = "^1.0.1"
anthropic = "^0.31.0"
openai = "^1.35.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
